--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <BODY>
 
     <canvas id="pinkboard"></canvas>
-    <h1 class="chu"> BẮC ĐẨU</h1>
+    <h1 class="chu">chỉnh sửa ở dòng 54</h1>
     <script>
 
         /*
